--- a/index.html
+++ b/index.html
@@ -82,6 +82,9 @@
             </div>
             <button type="submit" id="login-form-btn">Submit</button>
         </div>
+
+        <img src="/src/assets/illustration-3.png" alt="illustration-3" style="height: 250px; position: absolute; left: 100px; bottom: 30px;">
+        <img src="/src/assets/illustration-2.png" alt="illustration-1" style="height: 250px; position: absolute; right: 100px; bottom: 30px;">
     </div>
 </body>
 </html>
