--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
             <button type="submit" id="login-form-btn">Submit</button>
         </div>
 
-        <img src="/src/assets/illustration-1.png" alt="illustration-3" style="height: 250px; position: absolute; left: 100px; bottom: 30px;">
-        <img src="/src/assets/illustration-2.png" alt="illustration-1" style="height: 250px; position: absolute; right: 100px; bottom: 30px;">
+        <img src="/src/assets/illustration-1.png" alt="illustration-3" style="height: 200px; position: absolute; left: 5%; bottom: 5%;">
+        <img src="/src/assets/illustration-2.png" alt="illustration-1" style="height: 250px; position: absolute; right: 5%; bottom: 5%;">
     </div>
 </body>
 </html>
