final commit maybe

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SDMIT captive portal</title>
+    <title>SDMIT || captive portal</title>
 
     <link rel="icon" href="/src/assets/sdmit favicon.jpg" type="image/x-icon">
 
@@ -26,7 +26,8 @@
         <div class="nav-bar-left">
             <div class="nav-bar-desktop">
                 <a href="/index.html">
-                    <img src="/src/assets/captiveportal_desktop.png" alt="sdmit logo">
+                    <!-- <img src="/src/assets/captiveportal_desktop.png" alt="sdmit logo"> -->
+                    <img src="/src/assets/captive_portal_logo_big_removebg.png" alt="sdmit logo" style="max-width: 300px;">
                 </a>
             </div>
             <div class="nav-bar-mobile">
