responsive for tablet

--- a/index.html
+++ b/index.html
@@ -25,47 +25,41 @@
     <nav class="nav-bar">
         <div class="nav-bar-left">
             <div class="nav-bar-desktop">
-                <a href="/index.html">
+                <a href="https://sdmit.in/">
                     <!-- <img src="/src/assets/captiveportal_desktop.png" alt="sdmit logo"> -->
-                    <img src="/src/assets/captive_portal_logo_big_removebg.png" alt="sdmit logo" style="max-width: 300px;">
-                </a>
-            </div>
-            <div class="nav-bar-mobile">
-                <a href="/index.html">
-                    <img src="/src/assets/captiveportal_mobile.png" alt="sdmit logo">
+                    <img src="/src/assets/captive_portal_logo_big_removebg.png" alt="sdmit logo">
                 </a>
             </div>
         </div>
 
         <div class="nav-bar-right">
-            <!-- ul>li*9 -->
-            <a href="/src/pages/#" class="btn">Software</a>
-            <a href="/src/pages/#" class="btn">EERPMS</a>
-            <a href="/src/pages/#" class="btn">Antiragging</a>
+            <a href="#" class="btn nav-bar-links">Software</a>
+            <a href="#" class="btn nav-bar-links">EERPMS</a>
+            <a href="#" class="btn nav-bar-links">Antiragging</a>
 
             <ul class="menu">
                 <li class="menu-item">
-                    <a href="/src/pages/#" class="btn">Library</a>
+                    <a href="#" class="btn nav-bar-links">Library <i class="fa-solid fa-caret-down"></i></a>
                     <ul class="submenu">
                         <li class="submenu-item">
-                            <a href="/src/pages/#">NPTL</a>
+                            <a href="#" class="btn nav-bar-links">NPTL <i class="fa-solid fa-caret-right"></i></a>
                             <ul class="sub-submenu">
-                                <li class="sub-submenu-item"><a href="/src/pages/#">NPTL Home</a></li>
-                                <li class="sub-submenu-item"><a href="/src/pages/#">Online Course</a></li>
-                                <li class="sub-submenu-item"><a href="/src/pages/#">NPTL Registration</a></li>
+                                <li class="sub-submenu-item"><a href="#" class="btn nav-bar-links">NPTL Home</a></li>
+                                <li class="sub-submenu-item"><a href="#" class="btn nav-bar-links">Online Course</a></li>
+                                <li class="sub-submenu-item"><a href="#" class="btn nav-bar-links">NPTL Registration</a></li>
                             </ul>
                         </li>
-                        <li class="submenu-item"><a href="/src/pages/#">Dspace</a></li>
-                        <li class="submenu-item"><a href="/src/pages/#">Language Lab</a></li>
+                        <li class="submenu-item"><a href="#" class="btn nav-bar-links">Dspace</a></li>
+                        <li class="submenu-item"><a href="#"class="btn nav-bar-links">Language Lab</a></li>
                     </ul>
                 </li>
             </ul>
 
-            <a href="/src/pages/#" class="btn">PG Exam</a>
-            <a href="/src/pages/#" class="btn">Tutorial's</a>
-            <a href="/src/pages/#" class="btn">VTU Exam Form</a>
-            <a href="/src/pages/#" class="btn">Leave Application</a>
-            <a href="/src/pages/#" class="btn">Student Feedback</a>
+            <a href="#" class="btn nav-bar-links">PG Exam</a>
+            <a href="#" class="btn nav-bar-links">Tutorial's</a>
+            <a href="#" class="btn nav-bar-links">VTU Exam Form</a>
+            <a href="#" class="btn nav-bar-links">Leave Application</a>
+            <a href="#" class="btn nav-bar-links">Student Feedback</a>
         </div>
     </nav>
 
@@ -73,19 +67,24 @@
         <img src="/src/assets/sdmit_panaroma.jpg" alt="SDMIT Drone Shot" id="sdmit-drone-shot">
         <div class="login-form">
             <img src="/src/assets/login_form_img_no_bg.png" alt="SDMIT" id="sdmit-login-img">
+
             <div class="form-floating">
-                <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
-                <label for="floatingInput">Email address</label>
+                <input type="text" class="form-control" id="floatingInput" placeholder="name@example.com">
+                <label for="floatingInput">Username</label>
             </div>
+
             <div class="form-floating">
-                <input type="password" class="form-control" id="floatingPassword" placeholder="Password">
+                <input type="password" class="form-control" id="floatingPassword" placeholder="Password" required>
                 <label for="floatingPassword">Password</label>
             </div>
-            <button type="submit" id="login-form-btn">Submit</button>
+
+            <button type="submit" id="login-form-btn">Log In</button>
         </div>
 
         <img src="/src/assets/illustration-1.png" alt="illustration-3" style="height: 200px; position: absolute; left: 5%; bottom: 5%;">
         <img src="/src/assets/illustration-2.png" alt="illustration-1" style="height: 250px; position: absolute; right: 5%; bottom: 5%;">
     </div>
+
+    <!-- <script src="/main.js"></script> -->
 </body>
 </html>
