--- a/index.html
+++ b/index.html
@@ -9,9 +9,6 @@
 
     <link rel="stylesheet" href="/styles.css">
 
-    <!-- font awesome kit -->
-    <script src="https://kit.fontawesome.com/c4f50815cb.js" crossorigin="anonymous"></script>
-
     <!-- google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -85,6 +82,15 @@
         <img src="/src/assets/illustration-2.png" alt="illustration-1" style="height: 250px; position: absolute; right: 5%; bottom: 5%;">
     </div>
 
+    <footer class="footer">
+        <div>
+            <p>Made with <span class="footer-heart"> <i class="fa-solid fa-heart"></i> </span><span> < / </span>Subodh <span>></span> </p>
+        </div>
+    </footer>
+
     <!-- <script src="/main.js"></script> -->
+
+    <!-- font awesome kit -->
+    <script src="https://kit.fontawesome.com/c4f50815cb.js" crossorigin="anonymous"></script>
 </body>
 </html>
