--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SDMIT || captive portal</title>
 
-    <link rel="icon" href="/src/assets/sdmit favicon.jpg" type="image/x-icon">
+    <link rel="icon" href="/src/assets/sdmit_favicon.jpg" type="image/x-icon">
 
     <link rel="stylesheet" href="/styles.css">
 
@@ -62,6 +62,8 @@
 
     <div class="hero-content">
         <img src="/src/assets/sdmit_panaroma.jpg" alt="SDMIT Drone Shot" id="sdmit-drone-shot">
+        <img src="/src/assets/sdmit_panaroma_1.jpg" alt="SDMIT Drone Shot" id="sdmit-drone-shot-1">
+        <img src="/src/assets/sdmit_panaroma_2.jpg" alt="SDMIT Drone Shot" id="sdmit-drone-shot-2">
         <div class="login-form">
             <img src="/src/assets/login_form_img_no_bg.png" alt="SDMIT" id="sdmit-login-img">
 
@@ -78,8 +80,10 @@
             <button type="submit" id="login-form-btn">Log In</button>
         </div>
 
-        <img src="/src/assets/illustration-1.png" alt="illustration-3" style="height: 200px; position: absolute; left: 5%; bottom: 5%;">
-        <img src="/src/assets/illustration-2.png" alt="illustration-1" style="height: 250px; position: absolute; right: 5%; bottom: 5%;">
+        <div class="illustration">
+            <img src="/src/assets/illustration-1.png" alt="illustration-1" id="illustration-1">
+            <img src="/src/assets/illustration-2.png" alt="illustration-2" id="illustration-2">
+        </div>
     </div>
 
     <footer class="footer">
