--- a/error_page.html
+++ b/error_page.html
@@ -101,7 +101,7 @@
             </div>
 
             <div class="footer">
-                <p>Made with <span class="footer-heart"> <i class="fa-solid fa-heart"></i> </span><span> < / </span>Subodh <span>></span> </p>
+                <p>Made with <span class="footer-heart"> <i class="fa-solid fa-heart"></i> </span><span> < / </span><a href="https://beacons.ai/subodhpataki" style="text-decoration: none; color: black;" target="_blank">Subodh</a> <span>></span> </p>
             </div>
         </div>
     </div>
