--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             </div>
 
             <div class="footer">
-                <p>Made with <span class="footer-heart"> <i class="fa-solid fa-heart"></i> </span><span> < / </span><a href="https://beacons.ai/subodhpataki" style="text-decoration: none; color: black;" target="_blank">Subodh</a> <span>></span> </p>
+                <p>Designed and developed by < / </span><a href="https://beacons.ai/subodhpataki" style="text-decoration: none; color: black;" target="_blank"><b>Subodh</b></a> <span>></span></p>
             </div>
         </div>
     </div>
