--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                     </div>
                     <div class="footer">
                         <p>Designed and developed by
-                            <a href="https://beacons.ai/subodhpataki" target="_blank"id="footer-name">
+                            <a href="https://bento.me/subodh-pataki" target="_blank"id="footer-name">
                                 <b>Subodh Pataki</b>
                             </a>
                         </p>
